Add graph for Ikea-400

--- a/logs_task_2/measurements_with_1_ms_task.dgraph/Spotlight.plist
+++ b/logs_task_2/measurements_with_1_ms_task.dgraph/Spotlight.plist
@@ -10,6 +10,9 @@ sensorUeLow
 execTime, us
 sensorUeFullBright
 asaFrontBlink
+Max
+next max, after 8 ms
+Ikea 400 lm
 ikea1_crane
 </string>
 	<key>Text</key>
